--- a/package.json
+++ b/package.json
@@ -1,75 +1,76 @@
 {
-  "name": "ng-cctv",
-  "version": "0.1.0",
-  "scripts": {
-    "build": "gulp build",
-    "build:watch": "gulp",
-    "docs": "npm run docs:build",
-    "docs:build": "compodoc -p tsconfig.json -n ng-cctv -d docs --hideGenerator",
-    "docs:serve": "npm run docs:build -- -s",
-    "docs:watch": "npm run docs:build -- -s -w",
-    "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
-    "lite": "lite-server",
-    "playground:build": "tsc -p playground -w",
-    "playground": "concurrently \"npm run build:watch\" \"npm run playground:build\" \"npm run lite\"",
-    "test": "tsc && karma start"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/robholden/ng-cctv.git"
-  },
-  "author": {
-    "name": "Robert Holden",
-    "email": "rob.holden@live.co.uk"
-  },
-  "keywords": [
-    "angular"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/robholden/ng-cctv.git/issues"
-  },
-  "devDependencies": {
-    "@angular/common": "^6.0.9",
-    "@angular/compiler": "^6.0.9",
-    "@angular/compiler-cli": "^6.0.9",
-    "@angular/core": "^6.0.9",
-    "@angular/platform-browser": "^6.0.9",
-    "@angular/platform-browser-dynamic": "^6.0.9",
-    "@compodoc/compodoc": "^1.1.3",
-    "@types/jasmine": "^2.8.8",
-    "@types/node": "^10.5.3",
-    "angular-in-memory-web-api": "^0.6.1",
-    "codelyzer": "^4.4.2",
-    "concurrently": "^3.6.1",
-    "core-js": "^2.5.7",
-    "fs-extra": "^7.0.0",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-rollup": "^2.16.2",
-    "jasmine-core": "^3.1.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.5",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.1",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.2.0",
-    "lite-server": "^2.4.0",
-    "node-sass": "^4.9.2",
-    "node-sass-tilde-importer": "^1.0.2",
-    "node-watch": "^0.5.8",
-    "protractor": "^5.4.0",
-    "rollup": "^0.63.4",
-    "run-sequence": "^2.2.1",
-    "rxjs": "^6.2.2",
-    "systemjs": "^0.21.4",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.11.0",
-    "typescript": "^2.7.2",
-    "zone.js": "^0.8.26"
-  },
-  "engines": {
-    "node": ">=6.0.0"
-  }
+    "name": "ng-cctv",
+    "version": "0.1.0",
+    "scripts": {
+        "build": "gulp build",
+        "build:watch": "gulp",
+        "docs": "npm run docs:build",
+        "docs:build": "compodoc -p tsconfig.json -n ng-cctv -d docs --hideGenerator",
+        "docs:serve": "npm run docs:build -- -s",
+        "docs:watch": "npm run docs:build -- -s -w",
+        "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
+        "lite": "lite-server",
+        "playground:build": "tsc -p playground -w",
+        "playground": "concurrently \"npm run build:watch\" \"npm run playground:build\" \"npm run lite\"",
+        "test": "tsc && karma start"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/robholden/ng-cctv.git"
+    },
+    "author": {
+        "name": "Robert Holden",
+        "email": "rob.holden@live.co.uk"
+    },
+    "keywords": [
+        "angular"
+    ],
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/robholden/ng-cctv.git/issues"
+    },
+    "devDependencies": {},
+    "engines": {
+        "node": ">=6.0.0"
+    },
+    "dependencies": {
+        "@angular/common": "^8.2.13",
+        "@angular/compiler": "^8.2.13",
+        "@angular/compiler-cli": "^8.2.13",
+        "@angular/core": "^8.2.13",
+        "@angular/platform-browser": "^8.2.13",
+        "@angular/platform-browser-dynamic": "^8.2.13",
+        "@compodoc/compodoc": "^1.1.11",
+        "@types/jasmine": "^3.4.5",
+        "@types/node": "^12.12.5",
+        "angular-in-memory-web-api": "^0.9.0",
+        "codelyzer": "^5.2.0",
+        "concurrently": "^5.0.0",
+        "core-js": "^3.3.6",
+        "fs-extra": "^8.1.0",
+        "gulp": "^4.0.2",
+        "gulp-rename": "^1.4.0",
+        "gulp-rollup": "^2.16.2",
+        "jasmine-core": "^3.5.0",
+        "jasmine-spec-reporter": "^4.2.1",
+        "karma": "^4.4.1",
+        "karma-chrome-launcher": "^3.1.0",
+        "karma-cli": "^2.0.0",
+        "karma-coverage-istanbul-reporter": "^2.1.0",
+        "karma-jasmine": "^2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "lite-server": "^2.5.4",
+        "node-sass": "^4.13.0",
+        "node-sass-tilde-importer": "^1.0.2",
+        "node-watch": "^0.6.3",
+        "protractor": "^5.4.2",
+        "rollup": "^1.26.3",
+        "run-sequence": "^2.2.1",
+        "rxjs": "^6.5.3",
+        "systemjs": "^6.1.4",
+        "ts-node": "^8.4.1",
+        "tslint": "^5.20.0",
+        "typescript": "^3.6.4",
+        "zone.js": "^0.10.2"
+    }
 }
